2006-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  remove pygtk dep

2006-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* flumotion/component/dvb/dvb.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_sample_admin_gtk.py:
	* flumotion/test/test_sample_common.py:
	* po/Makevars:
	* po/POTFILES.in:
	* po/fr.po:
	* po/nl.po:
	  fix up bits and pass make distcheck

2006-11-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* conf/dvb-t.xml:
	Add sample flow for DVB-T, this gives TV3 in Barcelona.

2006-11-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add option to get a transport stream from file.
	This requires dvb-type property set to FILE.

2006-10-31  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Log the dvb card's frontend stats.

2006-10-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix modulation for changed dvbsrc parameter enum format.
	Do the videoscale after videorate.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix syntax error in pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Add a mpegts feeder to dvb.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Only scale if requested.  Add videorate and audiorate.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Actually fix the pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix pipeline template.

2006-10-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac: